[gd_scene load_steps=6 format=3 uid="uid://b406py2vmwi0v"]

[ext_resource type="Script" path="res://workspaces/miguel/pathfinding.gd" id="1_rilcv"]
[ext_resource type="PackedScene" uid="uid://cd3nc5gd6wn4a" path="res://models/pegson/clown/pegson_clown.tscn" id="2_tey77"]
[ext_resource type="PackedScene" uid="uid://p5j13aq80f7g" path="res://workspaces/miguel/balanceball.tscn" id="4_wo1p2"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_uslw2"]
radius = 0.25
height = 1.0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_cof1b"]
radius = 0.2
height = 1.0

[node name="PrimaryCharacter" type="CharacterBody3D"]
script = ExtResource("1_rilcv")
metadata/state = 0

[node name="pegson_clown" parent="." instance=ExtResource("2_tey77")]
transform = Transform3D(-1, 3.48787e-16, -1.50996e-07, 3.48787e-16, 1, -3.48787e-16, 1.50996e-07, -3.48787e-16, -1, 2.08165e-12, 2.08165e-12, 2.08165e-12)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 0.4, 2.08165e-12)
shape = SubResource("CapsuleShape3D_uslw2")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 0.4, 2.08165e-12)
visible = false
mesh = SubResource("CapsuleMesh_cof1b")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="BalanceBall" parent="." instance=ExtResource("4_wo1p2")]
visible = false

[connection signal="navigation_finished" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_navigation_finished"]
